More fixes to Germany and Test for Testers

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -676,14 +676,16 @@
  GER_bohemia_autobahn:0 "Berlin-Prague Autobahn Extension"
  GER_bohemia_autobahn_tt:0 "Sets level 9 §YInfrastructure§! along the route."
  GER_bohemia_autobahn_desc:0 "Since its inception in 1933, the autobahn project has been a glorious success. The construction efforts have reduced unemployment, and the wide roads stand as a monument to German economic recovery. The route from Berlin to Prague will help integrate the two large industrial areas."
- GER_Goering_Plan:0 "The Four Year Plan"
- GER_Goering_Plan_desc:0 "The Four Year Plan was an economic initiative which Hitler started. It involved, amongst other things, reducing unemployment and undertaking public works projects such as the German Autobahnen. Hermann Goering can be chosen to enforce the plan rigorously or Hjalmar Schacht can be chosen to losen control of the economy a bit."
+ GER_goering_plan:0 "The Four Year Plan"
+ GER_goering_plan_desc:0 "The Four Year Plan was an economic initiative which Hitler started. It involved, amongst other things, reducing unemployment and undertaking public works projects such as the German Autobahnen. Hermann Goering can be chosen to enforce the plan rigorously or Hjalmar Schacht can be chosen to losen control of the economy a bit."
  GER_reichsarbeitsdienst:0 "Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_desc:0 "The Reichsarbeitsdienst was an Organisation in which young men and later women worked for the nation. We can decide to send them to factories or to build up our country! It also will help when they later become soldiers because they will need less training!"
  GER_reichsarbeitsdienst_I:0 "Expanded Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_I_desc:0 "Now that we control so much of Europe, we can expand the Reichsarbeitsdienst and get much more people to work for our glorious nation."
  GER_reichsarbeitsdienst_I_tt:0 "This will §Gimprove§! your §YReichsarbeitsdienst National Spirit.§!"
- GER_expand_cooperation_between_military_and_civilian_industry:0 "Expand Cooperation Between Military and Civilian Industry"
+ GER_cooperation_between_military_and_civilian_industry:0 "Civilian-Military Industrial Cooperation"
+ GER_cooperation_between_military_and_civilian_industry_desc:0 "Cooperation between our armament industry and our civilian industry can increase efficiency and help them find synergies."
+ GER_expand_cooperation_between_military_and_civilian_industry:0 "Expand Civilian-Military Industrial Cooperation"
  GER_expand_cooperation_between_military_and_civilian_industry_desc:0 "Cooperation between our armament industry and our civilian industry can increase efficiency and help them find synergies. This idea comes from a General named Georg Thomas who was leading the armament department of the Wehrmacht for some time."
  GER_organisation_todt:0 "Organisation Todt"
  GER_organisation_todt_desc:0 "This was formed to build the Westwall and is named after Fritz Todt, a German engineer. Hitler issued him the order to construct the fortifications based on his proven expertise in the field. Later the Organisation participated in many projects, for example in building the Atlantic Wall. Albert Speer was leading the organisation after Todt died."
