--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -401,8 +401,8 @@
  GER_RAD_factory_desc:0 "The state sponsored employment organisation provided subsidized jobs for the unemployed to work in civic and land improvement projects. The organisation is also educating the German youth in the spirit of National Socialism to the national community and to the true working attitude, above all to the due respect of manual labor."
  GER_RAD_building:0 "Reichsarbeitsdienst"
  GER_RAD_building_desc:0 "The state sponsored employment organisation provided subsidized jobs for the unemployed to work in civic and land improvement projects. The organisation is also educating the German youth in the spirit of National Socialism to the national community and to the true working attitude, above all to the due respect of manual labor."
- GER_autarchy_idea:0 "Move Towards Autarchy"
- GER_autarchy_idea_desc:0 "For Germany to be truly great, it must be self-sufficient. We can't depend on trade in a state of war! We must make better use of our resources and focus on alternative sourcing of key resources."
+ GER_autarky:0 "Move Towards Autarchy"
+ GER_autarky_desc:0 "For Germany to be truly great, it must be self-sufficient. We can't depend on trade in a state of war! We must make better use of our resources and focus on alternative sourcing of key resources."
  GER_expanded_RAD_factory:0 "Expanded Reichsarbeitsdienst"
  GER_expanded_RAD_factory_desc:0 "The state sponsored employment organisation provided subsidized jobs for the unemployed to work in civic and land improvement projects. The organisation is also educating the German youth in the spirit of National Socialism to the national community and to the true working attitude, above all to the due respect of manual labor."
  GER_expanded_RAD_building:0 "Expanded Reichsarbeitsdienst"
@@ -444,8 +444,8 @@
  rheinmetall_desc:0 "Rheinmetall designs and builds all types of large guns and cannons."
  mauser:0 "Mauser"
  mauser_desc:0 "Mauser designs and builds all types of small arms."
- ig_faben:0 "IG Farben"
- ig_faben_desc:0 "IG Farben are keenly interested in Industrial research."
+ ig_farben:0 "IG Farben"
+ ig_farben_desc:0 "IG Farben are keenly interested in Industrial research."
  messerschmitt:0 "Messerschmitt"
  messerschmitt_desc:0 "Messerschmitt focuses on the design of Fighter Aircraft, such as the Bf109 and Bf110 lines."
  henschel_aircraft:0 "Henschel"
@@ -816,6 +816,10 @@
  bethlehem_shipbuilding_corporation:0 "Bethlehem Shipbuilding Corporation"
  kaiser_shipyards:0 "Kaiser Shipyards"
  new_york_shipbuilding_coorperation:0 "New York Shipbuilding Corporation"
+ reichswerke_hermann_goring:0 "Reichswerke Hermann Göring"
+ reichswerke_hermann_goring_desc:0 ""
+ vereinigte_stahlwerke:0 "Vereinigte Stahlwerke"
+ vereinigte_stahlwerke_desc:0 "Vereinigte Stahlwerke (United Steelworks) was a Cooperation of the Major Steelplants of Germany."
  krupp:0 "Krupp"
  krupp_desc:1 "Krupp focuses on heavy industry"
  germaniawerft:0 "Germaniawerft"
@@ -824,8 +828,6 @@
  siemens:0 "Siemens"
  siemens_desc:1 "Siemens designs and build electronics"
  opel:0 "Opel"
- Hugo_Boss:0 "Hugo Boss"
- Hugo_Boss_desc:0 "Cloth designer"
  heinkel:0 "Heinkel"
  dornier:0 "Dornier"
  levasseur:0 "Levasseur"
