--- a/bicemodded/localisation/english/modifiers_l_english.yml
+++ b/bicemodded/localisation/english/modifiers_l_english.yml
@@ -890,6 +890,8 @@
  MODIFIER_EQUIPMENT_CAPTURE:0 "Equipment Capture Ratio Gain" 
  MODIFIER_EQUIPMENT_CAPTURE_FOR_CONTROLLER: "Equipment Capture Ratio Gain for state controller"
  MODIFIER_COMMAND_POWER_GAIN:0 "Daily Command Power Gain"
+ MODIFIER_MAX_COMMAND_POWER:0 "Maximum Command Power Increase"
+ max_command_power_tt: " $MODIFIER_MAX_COMMAND_POWER$ $RIGHT|+=0$"
  command_power_gain_mult_tt: " $MODIFIER_COMMAND_POWER_GAIN_MULT$ $RIGHT|+=%1$"
  MODIFIER_MAX_COMMAND_POWER_MULT:0 "Maximum Command Power Increase Multiplier"
  max_command_power_mult_tt: " $MODIFIER_MAX_COMMAND_POWER_MULT$ $RIGHT|+=%1$"
