--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -682,7 +682,7 @@
  oil_plant_desc:0 "A network of factories for synthetic distillation and refining of oil products is the next step towards ensuring the fuel supply for our nation."
  improved_oil_plant:0 "Improved Oil Plant"
  improved_oil_plant_desc:0 "Moving previously experimental methods for distillation to large-scale operations will allow us to adapt better to available materials and needs."
- intermediate_oil_plant:0 "Purification techniques"
+ intermediate_oil_plant:0 "Purification Techniques"
  intermediate_oil_plant_desc:0 "New experimental purification techniques like hydro-treating can be used in oil manufacturing to greatly improve the final product."
  advanced_oil_plant:0 "Advanced Oil Plant"
  advanced_oil_plant_desc:0 "Our oil refineries can be further improved with new advanced oil processing methods like hydro-cracking, alkylation, mercaptan oxidation and isomerization."
