--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -649,6 +649,8 @@
  end_of_czechoslovakia_mefo_bills_tt:0 "Uses Czechoslovak gold to reduce the cost of §YMEFO bills§!.\n"
  GER_integrate_german_people:0 "Heim ins Reich: Posen"
  GER_integrate_german_people_desc:0 "Posen was German territory lost to us with the Treaty of Versailles, even though many ethnic Germans live here. It will be amongst the first parts of lost fatherland to return to the Reich!"
+ GER_set_up_the_generalgouvernement:0 "Set up the Generalgouvernement"
+ GER_set_up_the_generalgouvernement_desc:0 "We should prepare for a futher Nation of Poles under the Guidance of the Reich"
  GER_Integrate_Danzig:0 "Heim ins Reich: Danzig"
  GER_Integrate_Danzig_desc:0 "Danzig was German territory lost to us with the Treaty of Versailles, even though many ethnic Germans live here. It will be amongst the first parts of lost fatherland to return to the Reich!"
  GER_endsieg_category:0 "Endsieg"
