More fixes (test for diresweasel)

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1039,6 +1039,13 @@
  GER_war_with_greece_desc:0 "With Greece already at war, it would be a shame for Germany to miss out on a base in the Eastern Mediterranean."
  GER_fate_of_greece:0 "Fate Of Greece"
  GER_fate_of_greece_desc:0 "Greece has proven that it cannot cope with the new forces unleashed upon Europe. It is time to offer them the protection that only Germany can provide."
+ GER_fall_rot:0 "Fall Rot"
+ GER_fall_rot_desc:0 "Fall Rot (Case Red) was the german war plan to conquer france."
+ GER_fall_rot_tt:0 "Both Focuses: §YFall Rot and Fall Gelb§! are required to Unlock the Decision: §YWestfeldzug§!"
+ GER_fall_rot_ttt:0 "Having §YManstein, Guderian or Leeb as a Theorist§! will lead to the Auto-Completion of the Focus: §YFall Gelb§!"
+ GER_fall_gelb:0 "Fall Gelb"
+ GER_fall_gelb_desc:0 "Fall Gelb (Case Yellow was the german war plan to conquer the benelux nations of Belgium, Luxembourg and the Netherlands."
+ GER_fall_gelb_tt:0 "Both Focuses: §YFall Rot and Fall Gelb§! are required to Unlock the Decision: §YWestfeldzug§!"
  GER_weserubung:0 "Operation Weserübung"
  GER_weserubung_desc:0 "Norway is a critical strategic point and would be an obvious point of attack for any enemy wanting to disrupt our steel trade with Sweden. We cannot risk our enemies setting up bases in this region. To obtain a good staging area for the invasion of Norway we need to move on Denmark first."
  GER_around_maginot:0 "Around Maginot"
@@ -1142,14 +1149,14 @@
  GER_wunderwaffe_panzer_2_desc:0 "Although the heavy designs have given our engineers new headaches in terms of extreme wear on drivetrain components the Fuhrer envisions a tipping point were the armor becomes strong enough to make the tank invincible on the battlefield!"
  GER_Panzer_division:0 "Panzer-Division"
  GER_Panzer_division_desc:0 "The old "Leichte Divisions" have proven too thin-skinned to do their jobs as armor, but not maneuverable enough to fully replace cavalry. The next generation of tanks must have tougher armor and more powerful armaments, even if there is a slight cost in speed."
- GER_Panzer_Division_1937_unit_tt:0 "Gain a fresh division with §Y2 Light Armor§!, §Y2 Medium Armor§!, §Y5 Motorized§!, §Y1 Armored Car§!, §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
+ GER_panzer_division_1937_unit_tt:0 "Gain a fresh division with §Y2 Light Armor§!, §Y2 Medium Armor§!, §Y5 Motorized§!, §Y1 Armored Car§!, §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
  GER_liecht_division:0 "Leichte Division"
  GER_liecht_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
  GER_Leichte_Pz_Division_unit_tt:0 "Gain a fresh division with §Y4 Light Armor§!, §Y4 Motorized§!, §Y3 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
  GER_Panzer_corps:0 "Panzer-Corps"
  GER_Panzer_corps_desc:0 "Panzer corps are the main strike force of the Wehrmacht, and consists of roughly 5 motorised infantry divisions and panzer divisions, enough for large breakthrough operations beyond the enemy lines."
- GER_Wehrmacht:0 "Wehrmacht"
- GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
+ GER_wehrmacht:0 "Wehrmacht"
+ GER_wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
  GER_pioneer:0 "Pioneer Corps"
  GER_pioneer_desc:0 "The crucial tasks of the engineers will pave the way for our future operations."
 
@@ -3341,7 +3348,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  has_london_treaty_no_tt:0 "Does not have national spirit §YLondon Naval Treaty§!\n"
  remove_london_treaty_tt:0 "Remove §YLondon Naval Treaty§!\n"
  available_political_advisor:0 "Available as §YPolitical Advisor§!:\n"
- available_chief_of_army:0 "\n\nAvailable as §YChief of Army§!:\n"
+ available_chief_of_army:0 "Available as §YChief of Army§!:\n"
  available_chief_of_navy:0 "Available as §YChief of Navy§!:\n"
  available_chief_of_airforce:0 "Available as §YChief of Airforce§!:\n"
  available_military_high_command:0 "Available as §YMilitary High Command§!:\n"
