--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -821,13 +821,14 @@
  vereinigte_stahlwerke:0 "Vereinigte Stahlwerke"
  vereinigte_stahlwerke_desc:0 "Vereinigte Stahlwerke (United Steelworks) was a Cooperation of the Major Steelplants of Germany."
  krupp:0 "Krupp"
- krupp_desc:1 "Krupp focuses on heavy industry"
+ krupp_desc:1 ""
  germaniawerft:0 "Germaniawerft"
  blohm_und_voss:0 "Blohm & Voss"
  deutsche_werke_kiel:0 "Deutsche Werke Kiel"
  siemens:0 "Siemens"
  siemens_desc:1 "Siemens designs and build electronics"
  opel:0 "Opel"
+ hanomag:0 "Hanomag"
  heinkel:0 "Heinkel"
  dornier:0 "Dornier"
  levasseur:0 "Levasseur"
