--- a/bicemodded/localisation/english/military_industrial_organization_l_english.yml
+++ b/bicemodded/localisation/english/military_industrial_organization_l_english.yml
@@ -547,8 +547,10 @@ GER_focke_wulf_organization: "$focke_wulf$"
 GER_heinkel_organization: "$heinkel$"
 GER_dornier_organization: "$dornier$"
 GER_rheinmetall_organization: "$rheinmetall$"
+GER_krupp_organization: "$krupp$"
 GER_mauser_organization: "$mauser$"
 GER_opel_organization: "$opel$"
+GER_hanomag_organization: "$hanomag$"
 
 ### TRAITS ###
 GER_mio_trait_hotrolled_armor: "Hotrolled Armor"
