--- a/bicemodded/localisation/english/victory_points_l_english.yml
+++ b/bicemodded/localisation/english/victory_points_l_english.yml
@@ -31,6 +31,7 @@
  VICTORY_POINTS_3392:0 "Brzesc Litewski"
  VICTORY_POINTS_3393:0 "Grodno"
  VICTORY_POINTS_6558:0 "Poznan"
+ VICTORY_POINTS_9387:0 "Schneidemühl"
  VICTORY_POINTS_9508:0 "Lodz"
  VICTORY_POINTS_11479:0 "Lwow"
  VICTORY_POINTS_11666:0 "Vienna"
