--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -596,7 +596,7 @@
  summer_offesnive_V_decision_desc:0 "Finish off the Bolshevik swines, this is the end... either we finish them off now or they finish us. This is the Twilight of the Gods... Ragnarök."
  GER_operations:0 "German Operations"
  GER_operations_desc:0 "Major operations or undertakings done by the German Wehrmacht during World War 2."
- GER_offensives:0 "German offensives"
+ GER_offensives:0 "German Offensives"
  GER_offensives_desc:0 "The Wehrmacht has undertaken a lot of offensives and plans against the Allies during World war 2, including Fall Weiss, Weserubung or Fall Gelb. Lead the German Reich into greatness!"
  GER_SS_installment:0 "Increasing Power to the SS"
  GER_SS_installment_desc:0 " The 'Schutzstaffel' was a paramilitary organization under Adolf Hitler and the Nazi Party (NSDAP) in Nazi Germany. In 1925 Heinrich Himmler joined the unit, which had by then been reformed and given its final name. Under his direction it grew from a small paramilitary formation to one of the most powerful organizations in Nazi Germany, the SS was the foremost agency of security, surveillance, and terror within Germany and German-occupied Europe."
@@ -662,7 +662,9 @@
  GER_waronpoland:0 "Fall Weiss"
  GER_waronpoland_desc:0 "They know what the alternative is."
  GER_refusedanzig:0 "Poland refused to hand over Danzig"
- GER_westoffensive:0 "Fall Gelb"
+ GER_operationsealion:0 "Operation Sealion"
+ GER_operationsealion_desc:0 "It is time to conquer our last big Enemy in Western Europe. We must storm the british beaches!"
+ GER_westoffensive:0 "Westfeldzug"
  GER_westoffensive_desc:0 "It is time for the French and British to meet the power of the German Reich after all those years of suffering of the German people under the almost puppet state of Weimar."
  GER_waterexercice:0 "Unternehmen Weserubung"
  GER_waterexercice_desc:0 "We must secure our northern flank, the iron imports from Sweden and ensure access from the Baltic Sea to the Atlantic Ocean before our enemies do!"
