More germany changes

--- a/bicemodded/localisation/english/military_industrial_organization_l_english.yml
+++ b/bicemodded/localisation/english/military_industrial_organization_l_english.yml
@@ -551,6 +551,9 @@ GER_krupp_organization: "$krupp$"
 GER_mauser_organization: "$mauser$"
 GER_opel_organization: "$opel$"
 GER_hanomag_organization: "$hanomag$"
+GER_alkett_organization: "$alkett$"
+
+GER_alkett_organization_initial_trait: "Assault Gun Designer"
 
 ### TRAITS ###
 GER_mio_trait_hotrolled_armor: "Hotrolled Armor"
@@ -559,6 +562,8 @@ GER_mio_trait_maintenance_first_design: "Maintenance First Design"
 GER_mio_trait_fuselage_based_weapons: "Fuselage-Based Weapons"
 GER_mio_trait_early_jet_engine_adopter: "Early Jet Engine Adopter"
 GER_mio_trait_psychological_warfare: "Psychological Warfare"
+GER_mio_trait_henschel_design: "Henschel Design"
+GER_mio_trait_anti_tank_aircraft: "Anti-Tank Weapons"
 
 
 ###################
