--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -817,6 +817,7 @@
  kaiser_shipyards:0 "Kaiser Shipyards"
  new_york_shipbuilding_coorperation:0 "New York Shipbuilding Corporation"
  reichswerke_hermann_goring:0 "Reichswerke Hermann Göring"
+ reichswerke_hermann_goring_short:0 "R. W. Hermann Göring"
  reichswerke_hermann_goring_desc:0 ""
  vereinigte_stahlwerke:0 "Vereinigte Stahlwerke"
  vereinigte_stahlwerke_desc:0 "Vereinigte Stahlwerke (United Steelworks) was a Cooperation of the Major Steelplants of Germany."
@@ -829,6 +830,7 @@
  siemens_desc:1 "Siemens designs and build electronics"
  opel:0 "Opel"
  hanomag:0 "Hanomag"
+ alkett:0 "Alkett"
  heinkel:0 "Heinkel"
  dornier:0 "Dornier"
  levasseur:0 "Levasseur"
