--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -110,11 +110,12 @@
  USAvictory_through_airpower:0 "Victory Through Airpower"
  GERvictory_through_airpower:0 "Victory Through Airpower"
  GERclose_air_support_proponent:0 "Close Air Support Proponent"
- GERminister_of_armament_and_war_production:0 "Minister for War Production"
- GERruthless_pragmatist:0 "Ruthless Pragmatist"
+ GER_minister_of_armament_and_munitions:0 "Minister for Armament and Munitions"
+ GER_minister_of_armament_and_war_production:0 "Minister for Armament and War Production"
+ GER_ruthless_pragmatist:0 "Ruthless Pragmatist"
  GER_war_minister:0 "War Minister"
- GERengineer:0 "Industrial Engineer"
- GERmobile_warfare:0 "Infantry Tank Support Tactics"
+ GER_engineer:0 "Industrial Engineer"
+ GER_mobile_warfare:0 "Infantry Tank Support Tactics"
  GER_army_commando:1 "Commando\n(Expert)"
  assault_avaition:0 "Assault Aviation"
  naval_theorist:0 "Naval Theorist"
