Localisation fix for different factory uses

--- a/bicemodded/localisation/english/topbar_l_english.yml
+++ b/bicemodded/localisation/english/topbar_l_english.yml
@@ -28,6 +28,10 @@
  TOPBAR_CONVOY_STRING:0 "$FREE|^0$"
  MILITARY_FACTORIES_STATUS:0 "Military Factories in use: §Y$USED$§!/§Y$TOTAL$§!"
  DAMAGED_MILITARY_FACTORIES:0 "Damaged Military Factories: $COUNT|H$"
+ TOPBAR_FACTORY_STATUS_OWNED: "Owned: $COUNT|H$"
+ TOPBAR_FACTORY_STATUS_OCCUPIED: "From occupation: §G+$COUNT$§!"
+ TOPBAR_FACTORY_STATUS_TRADED: "From trade: §G+$COUNT$§!"
+ TOPBAR_FACTORY_STATUS_DAMAGED: "Damaged: §R-$COUNT$§!"
  NAVAL_FACTORIES_STATUS:0 "Naval Dockyards in use: §Y$USED$§!/§Y$TOTAL$§!"
  DAMAGED_NAVAL_FACTORIES:0 "Damaged Naval Dockyards: $COUNT|H$"
  CIVILIAN_FACTORIES_STATUS:0 "Civilian Factories in use: §Y$USED$§!/§Y$TOTAL$§!"
