Air tree done without Advisors to do

--- a/bicemodded/localisation/english/military_industrial_organization_l_english.yml
+++ b/bicemodded/localisation/english/military_industrial_organization_l_english.yml
@@ -304,6 +304,7 @@ mio_header_high_speed_focus: "High Speed Focus"
 mio_header_trains: "Trains"
 mio_header_fighter_aircraft: "Fighter Aircraft"
 mio_header_bomber_aircraft: "Bomber Aircraft"
+mio_header_heavy_bomber_aircraft: "Heavy Bomber Aircraft"
 mio_header_naval_aircraft: "Naval Aircraft"
 mio_header_light_aircraft: "Light Aircraft"
 mio_header_medium_aircraft: "Medium Aircraft"
@@ -1511,7 +1512,10 @@ generic_mio_trait_fighter_aircraft_production: "Fighter Aircraft Production"
 generic_mio_trait_bomber_aircraft_specialists: "Bomber Aircraft Specialists"
 generic_mio_trait_bomb_trucks: "Bomb Trucks"
 generic_mio_trait_fast_bombers: "Fast Bombers"
-generic_mio_trait_bomber_aircraft_production: "Bomber Aircraft Production"
+generic_mio_trait_heavy_bomber_aircraft_production: "Heavy Bomber Aircraft Production"
+generic_mio_trait_heavy_bomber_aircraft_specialists: "Heavy Bomber Aircraft Specialists"
+generic_mio_trait_heavy_bomb_trucks: "Heavy Bomb Trucks"
+generic_mio_trait_fast_heavy_bombers: "Fast Heavy Bombers"
 generic_mio_trait_naval_aircraft_specialists: "Naval Aircraft Specialists"
 generic_mio_trait_naval_strike: "Naval Strike"
 generic_mio_trait_naval_air_patrol: "Naval Air Patrol"
