More fixes to luftwaffe tree

--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -101,7 +101,7 @@
  air_warfare_theorist_3:0 "Air Warfare Theorist"
  dive_bomber:0 "Dive Bombing Theorist"
  carpet_bomber:0 "Carpet Bombing Theorist"
- GERdive_bomber:0 "Dive Bombing Theorist"
+ GER_dive_bomber_theorist:0 "Dive Bombing Theorist"
  GERcarpet_bomber:0 "Carpet Bombing\n(Genius)"
  USAcarpet_bomber:0 "Carpet Bombing Theorist"
  victory_through_airpower:0 "Victory Through Airpower"
