--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -102,14 +102,15 @@
  dive_bomber:0 "Dive Bombing Theorist"
  carpet_bomber:0 "Carpet Bombing Theorist"
  GER_dive_bomber_theorist:0 "Dive Bombing Theorist"
- GERcarpet_bomber:0 "Carpet Bombing\n(Genius)"
+ GER_carpet_bomber:0 "Carpet Bombing Theorist"
  USAcarpet_bomber:0 "Carpet Bombing Theorist"
  victory_through_airpower:0 "Victory Through Airpower"
  close_air_support_proponent:0 "Close Air Support Proponent"
  SOVvictory_through_airpower:0 "Victory Through Airpower"
  USAvictory_through_airpower:0 "Victory Through Airpower"
- GERvictory_through_airpower:0 "Victory Through Airpower"
- GERclose_air_support_proponent:0 "Close Air Support Proponent"
+ GER_victory_through_airpower:0 "Victory Through Airpower"
+ GER_close_air_support_proponent:0 "Close Air Support\n(Expert)"
+ GER_flexible_bomber_proponent:0 "Flexible Bomber\n(Expert)"
  GER_minister_of_armament_and_munitions:0 "Minister for Armament and Munitions"
  GER_minister_of_armament_and_war_production:0 "Minister for Armament and War Production"
  GER_ruthless_pragmatist:0 "Ruthless Pragmatist"
