Many More Fixes
Better Layout for German political focuses?

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -1139,10 +1139,10 @@
  germany.320.t:0 "Nobody can replace Todt"
  germany.320.d:0 "The Führer decided that nobody can replace Todt and that his office will become part of the Wehrmacht."
  germany.320.a:0 "Let's forget about this tragic dead."
- germany.321.t:0 "Reichsarbeitsdienst"
- germany.321.d:0 "We are forming a National Labour Service to combat the widespread unemployment. The service will mostly consist of young men and women who are eager to work for our glorious nation. We just have to decide if we want to use them to build up our country or send them to our factories! "
- germany.321.a:0 "Send them to the factories!"
- germany.321.b:0 "Send them to help building!"
+ germany.321.t:0 "Luftwaffe Fighter Contest"
+ germany.321.d:0 "We are forming a Airforce! As the Backbone of this Airforce we need to choose a Model of Fighter! Currently there is a Competition between Heinkel and Messerschmitt! We declare the winner!"
+ germany.321.a:0 "The Winner is Messerschmitt!"
+ germany.321.b:0 "The Winner is Heinkel!"
  germany.322.t:0 "German-Swedish Treaty"
  germany.322.d:0 "Germany ask us to expand our trade with them! In return they offer a non-aggression pact and our independence will be guaranteed! If we don't agree to this, we anger the Germans and they might attack us!"
  germany.322.a:0 "Yes, it's our only choice!"
