almost done with infantry research tab

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1788,14 +1788,24 @@
  mot_rockets_research:3 "Motorized Rocket Artillery Research Speed"
  UNLOCK_DIVISION_TEMPLATE:0 "Unlocks a free §HDivision Template§!"
  UNBUILDABLE_PROTOTYPE:0 "+ this is a §HNon-combat Prototype§! "
- INFANTRY_TITLE_WEAPONS:0 "WEAPONS & EQUIPMENT"
- INFANTRY_TITLE_HMG:0 "HMG"
- INFANTRY_TITLE_MORTARS:0 "MORTARS"
- INFANTRY_TITLE_UNIFORMS:0 "UNIFORMS"
+ 
+ 
+ 
+ INFANTRY_TITLE_HQ:0 "headquarter equipment"
+ INFANTRY_TITLE_UNIFORMS:0 "uniforms"
+ INFANTRY_TITLE_HMG:0 "heavy\nmachine\nguns"
+ INFANTRY_TITLE_MORTARS:0 "\nmortars"
+ INFANTRY_TITLE_GARRISON:0 "garrisons\n&\nanti-tank"
+ INFANTRY_TITLE_WEAPONS:0 "weapons\n&\nammunition"
+ INFANTRY_TITLE_SUPPORT:0 "close\ninfantry\nsupport"
+ INFANTRY_TITLE_TRANSPORT:0 "horses\nmotorized\nmechanized"
+ INFANTRY_TITLE_AMPHIBIOUS_MECHANIZED:0 "amphibious mechanized"
+ INFANTRY_TITLE_SPECIAL_FORCES:0 "special\nforces"
+ 
  INFANTRY_TITLE_AT:0 "Inf. AT"
  INFANTRY_TITLE_NV:0 "N-V"
- INFANTRY_TITLE_SPECIAL:0 "SPECIAL FORCES"
- INFANTRY_TITLE_MOTORISED:0 "MOTORIZED"
+ 
+ 
  
  
  ARMOUR_TITLE:0 "ARMOR"
