More techtree fixes we make them beautiful

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1746,9 +1746,10 @@
  ITA_armor_bonus_3:0 "Learn From German Tank Designs"
  ITA_armor_bonus_4:0 "Evaluate Tank Designs used in Spain"
 
- TITLE_ELECTRONIC_SUBTITLE:0 "Electronic Engineering"
- TITLE_EXP_ROCKETS_SUBTITLE:0 "Experimental Rockets"
- TITLE_ATOMIC_RESEARCH_SUBTITLE:0 "Atomic Research"
+ TITLE_RADIO_SUBTITLE:0 "Radio"
+ TITLE_ELECTRONIC_SUBTITLE:0 "Electronic\nEngineering"
+ TITLE_EXP_ROCKETS_SUBTITLE:0 "Experimental\nRockets"
+ TITLE_ATOMIC_RESEARCH_SUBTITLE:0 "Atomic\nResearch"
  cat_guerilla_warfare_research:0 "Asymmetric Warfare Research Speed"
  cat_mobile_warfare_research:0 "Mobile Warfare Research Speed"
  cat_superior_firepower_research:0 "Superior Firepower Research Speed"
