Tech tree should be ok now
to do special ones and navy and air but still to decide what to do so leave for now

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1792,7 +1792,7 @@
  
  
  
- INFANTRY_TITLE_HQ:0 "headquarter equipment"
+ INFANTRY_TITLE_HQ:0 "headquarters\nequipment"
  INFANTRY_TITLE_UNIFORMS:0 "uniforms"
  INFANTRY_TITLE_HMG:0 "heavy\nmachine\nguns"
  INFANTRY_TITLE_MORTARS:0 "\nmortars"
@@ -1800,7 +1800,7 @@
  INFANTRY_TITLE_WEAPONS:0 "weapons\n&\nammunition"
  INFANTRY_TITLE_SUPPORT:0 "close\ninfantry\nsupport"
  INFANTRY_TITLE_TRANSPORT:0 "horses\nmotorized\nmechanized"
- INFANTRY_TITLE_AMPHIBIOUS_MECHANIZED:0 "amphibious mechanized"
+ INFANTRY_TITLE_AMPHIBIOUS_MECHANIZED:0 "amphibious\nmechanized"
  INFANTRY_TITLE_SPECIAL_FORCES:0 "special\nforces"
  
  INFANTRY_TITLE_AT:0 "Inf. AT"
@@ -1839,10 +1839,20 @@
  ARMOUR_TITLE_SUPER_HEAVY_TANK:0 "super heavy\ntanks"
  ARMOUR_TITLE_SUPER_HEAVY_ASSAULT_GUNS:0 "super heavy\nassault guns"
  
- ARTILLERY_TITLE_ROCKET:0 "ROCKET ARTILLERY"
- ARTILLERY_TITLE_AT:0 "ANTI-TANK"
+ ARTILLERY_TITLE_AA:0 "\nanti-air\nartillery"
+ ARTILLERY_TITLE_HEAVY_AA:0 "heavy\nanti-air\nartillery"
+ ARTILLERY_TITLE_MOUNT_ART:0 "\nmountain\nartillery"
+ ARTILLERY_TITLE_LIGHT_ART:0 "\nlight\nartillery"
+ ARTILLERY_TITLE_MEDIUM_ART:0 "\nmedium\nartillery"
+ ARTILLERY_TITLE_HEAVY_ART:0 "\nheavy\nartillery"
+ ARTILLERY_TITLE_RAILWAY_ART:0 "\nrailway\nartillery"
+ ARTILLERY_TITLE_ROCKET_ART:0 "\nrocket\nartillery"
+ ARTILLERY_TITLE_AT:0 "\nanti-tank\nartillery"
+ 
  ARTILLERY_TITLE:0 "ARTILLERY"
- ARTILLERT_TITLE_AA:0 "ANTI-AIR"
+ 
+ 
+ 
  NAVAL_TITLE_DESTROYERS:0 "DESTROYERS"
  NAVAL_TITLE_AA_LIGHT_CRUISERS:0 "LIGHT AA CRUISERS"
  NAVAL_TITLE_LIGHT_CRUISERS:0 "LIGHT CRUISERS"
@@ -1861,17 +1871,22 @@
  NAVAL_TITLE_RADAR_TECHNOLOGY:0 "SEABORNE RADAR"
  NAVAL_TITLE_ASW_TECHNOLOGY:0 "ANTI-SUBMARINE WARFARE"
  NAVAL_TITLE_TORPEDO_TECHNOLOGY:0 "TORPEDOES"
- INDUSTRY_TITLE:0 "INDUSTRY"
- INDUSTRY_TOOLS_TITLE:0 "TOOLS"
- INDUSTRY_CONC_TITLE:0 "CONCENTRATED INDUSTRY"
- INDUSTRY_DISP_TITLE:0 "DISPERSED INDUSTRY"
- INDUSTRY_TITLE_PRODUCTION:0 "PRODUCTION"
- INDUSTRY_TITLE_HIC:0 "STEEL INDUSTRY"
- INDUSTRY_TITLE_OIL:0 "SYNTHETIC OIL"
- INDUSTRY_TITLE_CONSTRUCTION:0 "CONSTRUCTION"
- INDUSTRY_CONSTR_DEF_TITLE:0 "DEFENSES"
- INDUSTRY_CONSTR_INFRA_TITLE:0 "INFRA"
- INDUSTRY_CONSTR_CIV_TITLE:0 "CIVILIAN"
+ 
+ 
+ INDUSTRY_TOOLS_TITLE:0 "tools"
+ INDUSTRY_TITLE:0 "industry"
+ INDUSTRY_CONC_TITLE:0 "concentrated industry"
+ INDUSTRY_DISP_TITLE:0 "dispersed industry"
+ INDUSTRY_CONSTRUCTION_TITLE:0 "construction"
+ INDUSTRY_TITLE_PRODUCTION:0 "production"
+ INDUSTRY_TITLE_HIC:0 "steel industry"
+ INDUSTRY_TITLE_OIL:0 "synthetic oil & rubber"
+
+ INDUSTRY_CONSTR_DEF_TITLE:0 "defenses"
+ INDUSTRY_INFRASTRUCTURE_TITLE:0 "infrastructure"
+ INDUSTRY_CONSTR_CIV_TITLE:0 "civilian"
+ INDUSTRY_EXCAVATION_TITLE:0 "excavation"
+ 
  JET_ENGINES_RESEARCHED:0 "Allows researching technologies that require Jet Engines, such as jet aircraft"
  air_equipment:0 "Aircraft"
  Interwar_AA_tech:0 "Interwar AA"
