--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -1403,6 +1403,10 @@
  amateur_aviator_hess:0 "First Among Equals"
  promoted_from_the_ranks:0 "Promoted from the Ranks"
  promoted_from_the_ranks_desc:0 "TODO"
+ 
+ HUN_prime_minister_gombos:0 "Prime Minister"
+ HUN_prime_minister_bethlen:0 "Prime Minister"
+ HUN_prime_minister_daranyi:0 "Prime Minister"
 
  king_of_kings:0 "By the Conquering Lion of the Tribe of Judah, His Imperial Majesty Haile Selassie I, King of Kings, Lord of Lords, Elect of God"
  king_of_kings_2:0 "$king_of_kings$"
