just hun prime ministers

--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -1407,7 +1407,11 @@
  HUN_prime_minister_gombos:0 "Prime Minister"
  HUN_prime_minister_bethlen:0 "Prime Minister"
  HUN_prime_minister_daranyi:0 "Prime Minister"
-
+ HUN_prime_minister_imredy:0 "Prime Minister"
+ HUN_economic_organiser_imredy:0 "Economic Organizer"
+ HUN_prime_minister_teleki:0 "Prime Minister"
+ HUN_prime_minister_bardossy:0 "Prime Minister"
+ 
  king_of_kings:0 "By the Conquering Lion of the Tribe of Judah, His Imperial Majesty Haile Selassie I, King of Kings, Lord of Lords, Elect of God"
  king_of_kings_2:0 "$king_of_kings$"
  king_of_kings_3a:0 "$king_of_kings$"
